提交模糊综合评价和灰色关联分析笔记

--- a/python_project/评价类算法/Topsis法/Topsis法_learn.ipynb
+++ b/python_project/评价类算法/Topsis法/Topsis法_learn.ipynb
@@ -95,19 +95,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3b08fa75",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hahaha jnk\n",
-      "['hahaha', 'jnk']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# split('分隔符',分割次数)方法用于将字符串分割成子字符串，并返回一个包含这些子字符串的列表。\n",
     "kind=input('请输入内容:')\n",
@@ -436,16 +427,9 @@
    "id": "c678a5a0",
    "metadata": {},
    "source": [
-    "## 算法代码"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d274f639",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "## 算法代码\n",
+    "\n",
+    "~~~python\n",
     "import numpy as np  # 导入numpy库，用于进行科学计算\n",
     "\n",
     "# 从用户输入中接收参评数目和指标数目，并将输入的字符串转换为数值\n",
@@ -552,7 +536,8 @@
     "# 计算每个参评对象的得分排名\n",
     "s = d_f/(d_z+d_f)  # 根据d+和d-计算得分s，其中s接近于1则表示较优，接近于0则表示较劣\n",
     "for i in range(len(s)):\n",
-    "    print('第{}个对象的得分为：{}'.format(i+1,s[i]))  # 打印每个参评对象的得分"
+    "    print('第{}个对象的得分为：{}'.format(i+1,s[i]))  # 打印每个参评对象的得分\n",
+    "~~~"
    ]
   }
  ],
